# dde-polkit-agent

./: .gitignore  .packit.yaml  AuthDialog.cpp  AuthDialog.h  CHANGELOG.md  CMakeLists.txt  README.md  README.zh_CN.md  accessible.h  accessibledefine.h  accessiblemap.cpp  accessiblemap.h  agent-extension-proxy.h  agent-extension.h  com.deepin.Polkit1AuthAgent.xml  dde-polkit-agent.desktop  dde-polkit-agent.pro  errortooltip.cpp  errortooltip.h  lupdate.sh  main.cpp  pluginmanager.cpp  pluginmanager.h  policykitlistener.cpp  policykitlistener.h  polkit-dde-authentication-agent-1.desktop  usersmanager.cpp  usersmanager.h
.reuse/: dep5
.tx/: config  transifex.yaml
archlinux/: PKGBUILD  fix.patch
dbus/interface/: .gitignore
debian/: changelog  control  copyright  dde-polkit-agent.install  rules
libdde-auth/: authagent.cpp  authagent.h  deepinauthframework.cpp  deepinauthframework.h
libdde-auth/interface/: deepinauthinterface.h
rpm/: dde-polkit-agent.spec  deepin-polkit-agent.spec
tests/: polkit.cc
toolGenerate/qdbusxml2cpp/: org.deepin.dde.Accounts1.UserAdaptor.cpp  org.deepin.dde.Accounts1.UserAdaptor.h  org.deepin.dde.Accounts1Adaptor.cpp  org.deepin.dde.Accounts1Adaptor.h  org.deepin.dde.Fprintd1.DeviceAdaptor.cpp  org.deepin.dde.Fprintd1.DeviceAdaptor.h  org.deepin.dde.Fprintd1Adaptor.cpp  org.deepin.dde.Fprintd1Adaptor.h  org.deepin.dde.Polkit1.AuthAgentAdaptor.cpp  org.deepin.dde.Polkit1.AuthAgentAdaptor.h
translations/: dde-polkit-agent.ts  dde-polkit-agent_af.ts  dde-polkit-agent_ak.ts  dde-polkit-agent_am_ET.ts  dde-polkit-agent_ar.ts  dde-polkit-agent_ar_EG.ts  dde-polkit-agent_ast.ts  dde-polkit-agent_az.ts  dde-polkit-agent_bg.ts  dde-polkit-agent_bn.ts  dde-polkit-agent_bo.ts  dde-polkit-agent_br.ts  dde-polkit-agent_ca.ts  dde-polkit-agent_cs.ts  dde-polkit-agent_da.ts  dde-polkit-agent_de.ts  dde-polkit-agent_el.ts  dde-polkit-agent_en_AU.ts  dde-polkit-agent_en_GB.ts  dde-polkit-agent_en_US.ts  dde-polkit-agent_eo.ts  dde-polkit-agent_es.ts  dde-polkit-agent_es_419.ts  dde-polkit-agent_et.ts  dde-polkit-agent_fa.ts  dde-polkit-agent_fi.ts  dde-polkit-agent_fr.ts  dde-polkit-agent_gl_ES.ts  dde-polkit-agent_he.ts  dde-polkit-agent_hi_IN.ts  dde-polkit-agent_hr.ts  dde-polkit-agent_hu.ts  dde-polkit-agent_hy.ts  dde-polkit-agent_id.ts  dde-polkit-agent_it.ts  dde-polkit-agent_ja.ts  dde-polkit-agent_ka.ts  dde-polkit-agent_kab.ts  dde-polkit-agent_kk.ts  dde-polkit-agent_km_KH.ts  (+40 more)
